	* enable logging build config by default (but alert mask disabled by default)
	* deprecated RSS API
	* experimental support for BEP 38, "mutable torrents"
	* replaced lazy_bdecode with a new bdecoder that's a lot more efficient
	* deprecate time functions, expose typedefs of boost::chrono in the
	  libtorrent namespace instead
	* deprecate file_base feature in file_storage/torrent_info
	* improve piece picker support for reverse picking (used for snubbed peers)
	  to not cause priority inversion for regular peers
	* improve piece picker to better support torrents with very large pieces
	  and web seeds. (request large contiguous ranges, but not necessarily a
	  whole piece).
	* deprecated session_status and session::status() in favor of performance
	  counters.
	* improve support for HTTP where one direction of the socket is shut down.
	* remove internal fields from web_seed_entry
	* separate crypto library configuration <crypto> and whether to support
	  bittorrent protocol encryption <encryption>
	* simplify bittorrent protocol encryption by just using internal RC4
	  implementation.
	* optimize copying torrent_info and file_storage objects
	* cancel non-critical DNS lookups when shutting down, to cut down on
	  shutdown delay.
	* greatly simplify the debug logging infrastructure. logs are now delivered
	  as alerts, and log level is controlled by the alert mask.
	* removed auto_expand_choker. use rate_based_choker instead
	* optimize UDP tracker packet handling
	* support SSL over uTP connections
	* support web seeds that resolve to multiple IPs
	* added auto-sequential feature. download well-seeded torrents in-order
	* removed built-in GeoIP support (this functionality is orthogonal to
	  libtorrent)
	* deprecate proxy settings in favor of regular settings
	* deprecate separate settings for peer protocol encryption
	* support specifying listen interfaces and outgoing interfaces as device
	  names (eth0, en2, tun0 etc.)